[package]
name = "wss_game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "OffscreenCanvas", 
  "WebGlRenderingContext",
  "WebGl2RenderingContext",
  "console",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Window",
  "WebGlBuffer",
  "WebGlProgram",
  "WebGlShader",
  "WebGlUniformLocation",
  "WebGlTexture",
  "WorkerGlobalScope",
  "Response",
  "Blob",
  "ImageBitmap",
  "HtmlImageElement",
  "Request",
  "RequestInit",
  "RequestMode",
  "Headers"
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
glam = "0.24"
getrandom = { version = "0.2", features = ["js"] }
rapier3d = { version = "0.18", features = [ "wasm-bindgen" ] }

[profile.release]
opt-level = "s"
lto = true